[tool.poetry]
name = "lw-extract-gui"
version = "0.1.0"
description = "Gui to help extract Lw and LwA soundlevels from template file"
authors = ["Leroy Teegelbeckers"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
tk = "^0.1.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
